# SD-Visualizer

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  readme.md  readme.txt
domain/: blobReader.h  projection.h
domain/compute/: filter.cpp  filter.h  heatGrid.h  nodeQueries.cpp  nodeQueries.h  pointCloudBuild.cpp  pointCloudBuild.h  rasterize.cpp  rasterize.h  structureCompare.cpp  structureCompare.h
domain/directional/: btcTree.cpp  btcTree.h  costQuadtreeTree.cpp  costQuadtreeTree.h  dirKind.h  directionalField.cpp  directionalField.h  directionalLoader.cpp  directionalLoader.h  iDirectional.h  parameterSpace.h  quadtreeTree.cpp  quadtreeTree.h
domain/loaders/: dispatch.cpp  dispatch.h  dumpDescriptor.h  probe.cpp  probe.h  spatialLoader.cpp  spatialLoader.h
domain/spatial/: iSpatial.h  sdtreeSpatial.cpp  sdtreeSpatial.h
domain/state/: appState.cpp  appState.h  binInfo.h  displayFlags.h  mode.h  perModeStates.h  slot.h
globals/: bounds.h  config.h  palette.h  uiColors.h
gui/: geometryRenderer.cpp  geometryRenderer.h  glResources.cpp  glResources.h  orbitCamera.cpp  orbitCamera.h  pfmExport.h  pngExport.h  shaders.cpp  shaders.h
gui/panels/: directionalPanel.cpp  directionalPanel.h  sequenceBar.cpp  sequenceBar.h  settingsPanel.cpp  settingsPanel.h  spatialPanel.cpp  spatialPanel.h
viewer/: sdtreeViewer.cpp  sdtreeViewer.h
